--- a/advice-generator-app/index.html
+++ b/advice-generator-app/index.html
@@ -15,14 +15,9 @@
   </style>
 </head>
 <body>
-
-  Advice #<!-- Advice ID goes here -->
-
-  "<!-- Advice text goes here -->"
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <main>
+    <div id='root'></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </main>
 </body>
 </html>
