--- a/advice-generator-app/index.html
+++ b/advice-generator-app/index.html
@@ -17,7 +17,9 @@
 <body>
   <main>
     <div id='root'></div>
+  </main>  
+  <footer>
     <script type="module" src="/src/main.jsx"></script>
-  </main>
+  </footer>
 </body>
 </html>
